# kpath_enterprise

./: .env.example  .gitignore  README.md  RUNNING.md  SCRIPTS_README.md  USER_GUIDE_UPDATE_INFO.txt  add_50th_retail_service.py  add_retail_enterprise_services.py  add_shipping_insurance_service.py  add_shoes_agent_service.py  alembic.ini  api_key_manager.py  api_key_manager_fixed.py  create_api_key.py  create_production_api_key.py  debug_orchestration.py  debug_search_issue.py  docker-compose.yml  example_usage.py  final_token_analysis_summary.py  final_verification.py  generate_user_guide.py  get_jwt_token.py  hash_test.py  kpath_enterprise_13062025.sql  kpath_enterprise_13062025_v2.sql  kpath_enterprise_13062025_v3  kpath_enterprise_16062025.sql  kpath_enterprise_17062025.sql  kpath_enterprise_19062025  mini_token_test.py  pa_agent.sh  pa_agent_enhanced.sh  pyproject.toml  requirements.txt  restart.sh  search.py  simple_pa.py  status.sh  stop.sh  (+20 more)
agents/: token_tracker.py
alembic/: env.py
backend/: __init__.py  main.py
database/: add_password_hash.sql  schema.sql  seed.py  simple_seed.py
docs/: KPATH Enterprise – Functional Specification v3.md  TOKEN_OPTIMIZATION_BREAKTHROUGH.md  admin_user_setup.md  agent_to_agent_communication.md  analytics_data_collection_status.md  api_fix_2025_06_13.md  api_fix_summary_2025_06_18.md  api_key_usage.md  backend_api_update_summary.md  documentation_update_summary.md  frontend_update_tasks.md  functionality_analysis.md  implementation_summary.md  import-guide.md  import_guide_complete.md  import_system_complete.md  (+17 more)
(+186 files in other folders)
